--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
   ],
   "headers": [
     {
-      "source": "/assets/(.*)",
+      "source": "/assets/:path*",
       "headers": [
         {
           "key": "Cache-Control",
@@ -21,7 +21,16 @@
       ]
     },
     {
-      "source": "/(.*\\.(js|css))",
+      "source": "/js/:path*",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/css/:path*",
       "headers": [
         {
           "key": "Cache-Control",
